feat(core): ✨ make errors data respect RFC 7231
