# core/configs/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.3
 info:
     description: Example Server api definition
     version: 1.0.0
@@ -330,19 +330,61 @@ components:
             schema:
                 type: string
     schemas:
-        ErrorData:
+        ProblemDetails:
             type: object
-            description: Informations regarding a backend error
+            description: Problem Details
             required:
-                - description
-                - errorCode
+                - type
+                - title
+                - status
+                - detail
             properties:
-                description:
+                type:
                     type: string
-                errorCode:
-                    $ref: '#/components/schemas/ErrorCode'
-                inputId:
+                    description: A URI reference [RFC3986] that identifies the problem type.
+                title:
                     type: string
+                    description: A short, human-readable summary of the problem type.
+                status:
+                    type: integer
+                    description: The HTTP status code ([RFC7231], Section 6) generated by the origin server for this occurrence of the problem.
+                    minimum: 0
+                detail:
+                    type: string
+                    description: A human-readable explanation specific to this occurrence of the problem.
+                instance:
+                    type: string
+                    description: A URI reference that identifies the specific occurrence of the problem.
+        ErrorData:
+            allOf:
+                - $ref: '#/components/schemas/ProblemDetails'
+                - type: object
+                  description: Informations regarding a backend error
+                  required:
+                      - title
+                  properties:
+                      title:
+                          $ref: '#/components/schemas/ErrorCode'
+                      validationErrors:
+                          type: array
+                          items:
+                              $ref: '#/components/schemas/ValidationError'
+        ValidationError:
+            allOf:
+                - type: object
+                  description: Informations regarding a validation error
+                  required:
+                      - field
+                      - message
+                  properties:
+                      field:
+                          type: string
+                          description: The field that caused the error
+                      message:
+                          type: string
+                          description: The error message
+                - type: object
+                  additionalProperties: true
         ErrorCode:
             type: string
             description: |
